--- a/secure_partition/CMakeLists.txt
+++ b/secure_partition/CMakeLists.txt
@@ -45,10 +45,10 @@ target_link_libraries(tfm_app_rot_partition_sp
         tfm_psa_rot_partition_crypto
 )
 
-target_link_libraries(tfm_app_rot_partition_sp
-    PRIVATE
-        ${CMAKE_CURRENT_SOURCE_DIR}/../lib/libblst.a
-)
+#target_link_libraries(tfm_app_rot_partition_sp
+#    PRIVATE
+#        ${CMAKE_CURRENT_SOURCE_DIR}/../lib/libblst.a
+#)
 
 #add_library(mylib_lib STATIC IMPORTED GLOBAL)
 #add_dependencies(
