Static library (libblst.a) included successfully

--- a/mycli/prj.conf
+++ b/mycli/prj.conf
@@ -32,3 +32,5 @@ CONFIG_NEWLIB_LIBC_NANO=n
 CONFIG_CJSON_LIB=y
 CONFIG_NRF_MODEM_LIB=n
 CONFIG_NORDIC_SECURITY_BACKEND=y
+
+CONFIG_PM_PARTITION_SIZE_TFM=0x4C000 
