Updated secure keygen. Print keys JSON is WIP

--- a/secure_partition/CMakeLists.txt
+++ b/secure_partition/CMakeLists.txt
@@ -6,6 +6,8 @@
 
 add_library(tfm_app_rot_partition_sp STATIC)
 
+add_definitions(-DNRF)
+
 target_include_directories(tfm_app_rot_partition_sp
     INTERFACE
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
