Added TFM flag definition. If it's removed, bls_hsm functions will not be executed in secure partition

--- a/mycli/CMakeLists.txt
+++ b/mycli/CMakeLists.txt
@@ -21,7 +21,7 @@ set_property(TARGET zephyr_property_target
 )
 
 project(mycli)
-add_definitions(-DNRF)
+add_definitions(-DNRF -DTFM)
 
 target_sources(app PRIVATE
   src/main.c
