--- a/secure_partition/tfm_secure_partition.yaml
+++ b/secure_partition/tfm_secure_partition.yaml
@@ -38,6 +38,13 @@
       "version_policy": "STRICT"
     },
     {
+      "name": "TFM_SIGN_PK",
+      "signal": "TFM_SIGN_PK_REQ",
+      "non_secure_clients": true,
+      "version": 1,
+      "version_policy": "STRICT"
+    },
+    {
       "name": "TFM_GET_KEY",
       "signal": "TFM_GET_KEY_REQ",
       "non_secure_clients": true,
