Added reset to TFM

--- a/secure_partition/tfm_secure_partition.yaml
+++ b/secure_partition/tfm_secure_partition.yaml
@@ -64,6 +64,13 @@
       "non_secure_clients": true,
       "version": 1,
       "version_policy": "STRICT"
+    },
+    {
+      "name": "TFM_RESET",
+      "signal": "TFM_RESET_REQ",
+      "non_secure_clients": true,
+      "version": 1,
+      "version_policy": "STRICT"
     }
   ]
 }
