PM_PARTITION_SIZE_TFM_SRAM value restored to default

--- a/mycli/prj.conf
+++ b/mycli/prj.conf
@@ -34,6 +34,6 @@ CONFIG_NRF_MODEM_LIB=n
 CONFIG_NORDIC_SECURITY_BACKEND=y
 
 CONFIG_PM_PARTITION_SIZE_TFM=0x50000
-CONFIG_PM_PARTITION_SIZE_TFM_SRAM=0x63000
+#CONFIG_PM_PARTITION_SIZE_TFM_SRAM=0x63000
 
 #CONFIG_MAIN_STACK_SIZE=51200
