--- a/mycli/prj.conf
+++ b/mycli/prj.conf
@@ -29,6 +29,7 @@ CONFIG_FW_INFO=y
 CONFIG_SHELL_CMD_BUFF_SIZE= 376
 CONFIG_NEWLIB_LIBC=y
 CONFIG_NEWLIB_LIBC_NANO=n
+CONFIG_NEWLIB_LIBC_FLOAT_PRINTF=y
 CONFIG_CJSON_LIB=y
 CONFIG_NRF_MODEM_LIB=n
 CONFIG_NORDIC_SECURITY_BACKEND=y
