Enable UART loggin backend

--- a/mycli/prj.conf
+++ b/mycli/prj.conf
@@ -34,7 +34,13 @@ CONFIG_CJSON_LIB=y
 CONFIG_NRF_MODEM_LIB=n
 CONFIG_NORDIC_SECURITY_BACKEND=y
 
-CONFIG_PM_PARTITION_SIZE_TFM=0x50000
+# For building without enable debug option
+#CONFIG_PM_PARTITION_SIZE_TFM=0x50000
+# For building with enable debug option
+CONFIG_PM_PARTITION_SIZE_TFM=0x60000
 #CONFIG_PM_PARTITION_SIZE_TFM_SRAM=0x63000
 
 #CONFIG_MAIN_STACK_SIZE=51200
+
+# This option enables the UART logging backend.
+CONFIG_LOG_BACKEND_UART=y
