Added configuration for debuggin

--- a/mycli/prj.conf
+++ b/mycli/prj.conf
@@ -44,3 +44,5 @@ CONFIG_PM_PARTITION_SIZE_TFM=0x60000
 
 # This option enables the UART logging backend.
 CONFIG_LOG_BACKEND_UART=y
+CONFIG_LOG_DEFAULT_LEVEL=4
+#CONFIG_LOG_PRINTK=y
