--- a/mycli/prj.conf
+++ b/mycli/prj.conf
@@ -46,3 +46,12 @@ CONFIG_PM_PARTITION_SIZE_TFM=0x60000
 CONFIG_LOG_BACKEND_UART=y
 CONFIG_LOG_DEFAULT_LEVEL=4
 #CONFIG_LOG_PRINTK=y
+#CONFIG_DEBUG_OPTIMIZATIONS=y
+#CONFIG_DEBUG_THREAD_INFO=y
+#CONFIG_LOG_MODE_IMMEDIATE=y
+#CONFIG_ASSERT=y
+#CONFIG_NO_OPTIMIZATIONS=y
+#CONFIG_THREAD_NAME=y
+#CONFIG_USE_SEGGER_RTT=y
+#CONFIG_LOG_BACKEND_RTT=y
+#CONFIG_LOG_BACKEND_SHOW_COLOR=y
