Execute GetFreeMemorySize inside TF-M. It reboots the board

--- a/secure_partition/tfm_secure_partition.yaml
+++ b/secure_partition/tfm_secure_partition.yaml
@@ -31,6 +31,13 @@
       "version_policy": "STRICT"
     },
     {
+      "name": "TFM_GET_FREE_MEMORY_SIZE",
+      "signal": "TFM_GET_FREE_MEMORY_SIZE_REQ",
+      "non_secure_clients": true,
+      "version": 1,
+      "version_policy": "STRICT"
+    },
+    {
       "name": "TFM_SECURE_KEYGEN",
       "signal": "TFM_SECURE_KEYGEN_REQ",
       "non_secure_clients": true,
