Added configuration to avoid rebooting when signature fails. Fatal error log enabled in TF-M log

--- a/mycli/prj.conf
+++ b/mycli/prj.conf
@@ -20,10 +20,10 @@ CONFIG_DEVICE_SHELL=y
 CONFIG_POSIX_CLOCK=y
 CONFIG_DATE_SHELL=y
 CONFIG_HEAP_MEM_POOL_SIZE=49152
-#CONFIG_THREAD_ANALYZER=y
-#CONFIG_THREAD_ANALYZER_USE_PRINTK=y
-#CONFIG_THREAD_ANALYZER_AUTO=y
-#CONFIG_THREAD_ANALYZER_AUTO_INTERVAL=10
+CONFIG_THREAD_ANALYZER=y
+CONFIG_THREAD_ANALYZER_USE_PRINTK=y
+CONFIG_THREAD_ANALYZER_AUTO=y
+CONFIG_THREAD_ANALYZER_AUTO_INTERVAL=5
 CONFIG_SHELL_STACK_SIZE=49152
 CONFIG_FW_INFO=y
 CONFIG_SHELL_CMD_BUFF_SIZE= 376
@@ -56,3 +56,15 @@ CONFIG_USE_SEGGER_RTT=y
 CONFIG_LOG_BACKEND_RTT=y
 CONFIG_LOG_BACKEND_SHOW_COLOR=y
 #?CONFIG_TFM_SPM_LOG_LEVEL_INFO=y
+
+CONFIG_RESET_ON_FATAL_ERROR=n
+
+#
+CONFIG_TFM_PARTITION_LOG_LEVEL_DEBUG=y
+CONFIG_TFM_SPM_LOG_LEVEL_DEBUG=y
+
+# Dump exception info. Must be combined with enabling log output.
+CONFIG_TFM_EXCEPTION_INFO_DUMP=y
+
+# Don't use the minimal TF-M configuration as that doesn't support logging
+CONFIG_TFM_PROFILE_TYPE_NOT_SET=y
